<resources>
    <string name="app_name">Button Memory</string>
    <string name="button6">6</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button3">3</string>
    <string name="buttonArm">Arm</string>
    <string name="button9">9</string>
    <string name="button2">2</string>
    <string name="textview">textview</string>
    <string name="text">text</string>
</resources>
