<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:onClick="b6"
        android:text="@string/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="b4"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button9"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="b5"
        android:text="@string/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button8"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:onClick="b7"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:onClick="b8"
        android:text="@string/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="b3"
        android:text="@string/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button"
        android:layout_width="263dp"
        android:layout_height="135dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="Arm"
        android:text="@string/buttonArm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="51dp"
        android:onClick="b9"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="51dp"
        android:onClick="b2"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/affichageText"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="Salut Vincent!"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>
